--- a/host/Epistemology/Old_Epistemology_notes/Q2_Thomist_Epistemology.html
+++ b/host/Epistemology/Old_Epistemology_notes/Q2_Thomist_Epistemology.html
@@ -42,7 +42,7 @@
 <div class='header'>
 	[ <a href='./Q1_Contemporary_Epistemology.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='../index.html.html'>Index</a> ]
 
 	[ <a href='../Zim_Epistemology_Notes.html'>Next</a> ]
 </div>
