--- a/host/Epistemology/Zim_Epistemology_Notes/Dec_12_2017.html
+++ b/host/Epistemology/Zim_Epistemology_Notes/Dec_12_2017.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Home</title>
+	<title>Dec 12 2017</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./Dec_7_2017.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='../index.html.html'>Index</a> ]
 
-	[ <a href='./Old_Epistemology_notes.html'>Next</a> ]
+	[ <a href='./Dec_14_2017.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,16 +53,75 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Home <a name='Home'></a></h1>
+	<h1>Dec 12 2017 <a name='Zim Epistemology Notes:Dec 12 2017'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Monday 12 February 2018
+Created Tuesday 12 December 2017
+</p>
+
+<h4>Extra stuff:</h4>
+
+<p>
+<ul>
+<li>Lots of housekeeping stuff
+<ul>
+<li>Took course evals</li>
+<li>Talked about justice and charity</li>
+</ul></li>
+</ul>
+</p>
+
+<h4>Class</h4>
+
+<p>
+Different disciplines are defined by different middles<br>
+<ul>
+<li>Maths
+<ul>
+<li>Earth is a sphere</li>
+<li>Spheres are round</li>
+</ul>
+</li>
+<li>Natural philosophy
+<ul>
+<li>Earth is made of matter</li>
+<li>Matter gratiates to a fixed point</li>
+<li>Matter around a fixed point is round</li>
+</ul>
+</li>
+<li>One conclusion
+<ul>
+<li>Earth is round</li>
+</ul></li>
+</ul>
 </p>
 
 <p>
-Epistemology notes.
+Applied to a modern argument: the universe had a beginning<br>
+<ul>
+<li>Philosophy
+<ul>
+<li>The universe is finite and has non-maximal entropy.
+<ul>
+<li>nme: The point at which the universe cannot undergo any other physical changes.</li>
+</ul>
+</li>
+<li>What is finite and has non-maximal entropy has a beginning in time.</li>
+</ul>
+</li>
+<li>Theology
+<ul>
+<li>The universe was created from nothing by God.</li>
+<li>What is created from nothing by God has a beginning.</li>
+</ul>
+</li>
+<li>One conclusion
+<ul>
+<li>The universe had a beginning</li>
+</ul></li>
+</ul>
 </p>
 
 	</div>
