--- a/host/Epistemology/Zim_Epistemology_Notes/Dec_5_2017.html
+++ b/host/Epistemology/Zim_Epistemology_Notes/Dec_5_2017.html
@@ -42,7 +42,7 @@
 <div class='header'>
 	[ <a href='../Zim_Epistemology_Notes.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='../index.html.html'>Index</a> ]
 
 	[ <a href='./Dec_7_2017.html'>Next</a> ]
 </div>
