--- a/host/Epistemology/Zim_Epistemology_Notes/Nov_28_2017.html
+++ b/host/Epistemology/Zim_Epistemology_Notes/Nov_28_2017.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Home</title>
+	<title>Nov 28 2017</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./Dec_14_2017.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='../index.html.html'>Index</a> ]
 
-	[ <a href='./Post-Move.html'>Next</a> ]
+	[ <a href='./Nov_30_2017.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,23 +53,144 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Home <a name='Home'></a></h1>
+	<h1>Nov 28 2017 <a name='Zim Epistemology Notes:Nov 28 2017'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Monday 12 February 2018
+Created Tuesday 28 November 2017
 </p>
 
+<h2>Remainder of knower and known reading:</h2>
+
 <p>
-Import of Senior Classes microsoft notebook on philosophical theology.
+How exactly can the knower be correlated with the known?:<br>
+<div style='padding-left: 30pt'>
+The form which is binded to matter is the same which informs the intellect, but works in a different way, since the intellect has no matter.
+</div>
 </p>
+
+<br>
+
+<h5>Intentionality:</h5>
+
+<p>
+<ol type="1" start="1">
+<li><u>Intentionality</u> is the feature of mental states that makes them of or about things besides themselves</li>
+<li>What makes a state to be an intentional state?
+<ol type="a" start="1">
+<li>Being isomorphic to some other set of states or features/properties.</li>
+<li>The source of intentionality of mental states is the intentionality of <i>nature</i></li>
+</ol>
+</li>
+<li>Problems:
+<ol type="a" start="1">
+<li>(a) Isomorphism is insufficient for intentionality
+<ol type="1" start="1">
+<li>there is a 1 to 1 mapping between 2 identical stones, perfect isomorphism, neither has intentional states. Therefore, isomorphic states do not have intentionality.</li>
+<li>2 dogs have the same form, but they don't <i>know </i>eachother because of this.</li>
+<li>Isomorphism is a 2 way street, so if fido is isomorphic to spot, vice versa is true. Intentionality however is a 1 way street. Isomorphism is insufficient for intentionality because it gives a 2 way street and intent is a 1 way street</li>
+</ol>
+</li>
+<li>(a)Not even Thomistic sameness of form is sufficient for intentionality</li>
+<li>(a)Not even Thomistic sameness of form plus causation is sufficient for intentionality
+<ol type="1" start="1">
+<li>An oak tree has the form of oak tree. It drops an acorn falls into the ground and grows into an oak tree. 
+<ol type="a" start="1">
+<li>They both have the same form</li>
+<li>The first oak tree is the cause of the form of the second oak tree</li>
+<li>But, though we have sameness of form and causation in this scenario, this doesnt seem to be intentional.</li>
+</ol></li>
+</ol></li>
+</ol>
+</li>
+<li>Positive conception of intentionality
+<ol type="a" start="1">
+<li>Due to the issues with (a) we must pose (b)</li>
+<li>Nature provides intentionality to thought and knowledge</li>
+<li>My cognitive powers are directed to the world, and they are means by which I achieve my end which involves knowledge of truth.
+<ol type="1" start="1">
+<li>I by my nature am directed toward an end
+<ol type="a" start="1">
+<li>Rational activity in accord with virtue (the highest virtue)</li>
+<li>The development and use of virtue</li>
+<li>All of these things help fulfil the end, which is pursuit of truth</li>
+<li>The cognitive powers are directed by this natural inclination</li>
+</ol></li>
+</ol>
+</li>
+<li>Sameness of form in my intellect is the means by which my cognitive powers are directed towards this or that kind of thing</li>
+</ol></li>
+</ol>
+</p>
+
+<h5>Truth:</h5>
+
+<p>
+<ol type="1" start="1">
+<li><u>Truth</u> is the <i>adequation</i> of the mind to the thing.
+<ol type="a" start="1">
+<li>Involves 2 things:
+<ol type="1" start="1">
+<li>towards (ad)</li>
+<li>equality (equation)</li>
+</ol></li>
+</ol>
+</li>
+<li>The world is the <i>measure</i> of the mind's equality to reality</li>
+<li>What in the mind can be true?</li>
+<li>Not the mind's first act
+<ol type="a" start="1">
+<li>Acts of the mind:
+<ol type="1" start="1">
+<li>Simple apprehension
+<ol type="a" start="1">
+<li>What a dog is</li>
+<li>Can be incomplete <b>but is not subject to being in actual error</b></li>
+</ol>
+</li>
+<li>Judgement
+<ol type="a" start="1">
+<li>Sentences or propositions about the thing, combines different concepts</li>
+<li>A <i>dog</i> is a <i>material</i> thing</li>
+</ol>
+</li>
+<li>Reasoning
+<ol type="a" start="1">
+<li>Arguments</li>
+<li>All men are mortal</li>
+<li>Socrates is a man</li>
+<li>=&gt; Socrates is mortal</li>
+</ol></li>
+</ol></li>
+</ol>
+</li>
+<li>Simple apprehension cannot be true or false
+<ol type="a" start="1">
+<li>Equality b/w real things requires distinction among them</li>
+<li>Superman can't be called the equal of Clark Kent</li>
+<li>This can't be said because there is no formal difference between the first act of the mind and the object of apprehension</li>
+</ol>
+</li>
+<li>Truth is found in the second act of the mind
+<ol type="a" start="1">
+<li>Judgements have propositional structure, things in the world do not have propositional structure.</li>
+<li>Whether or not the judgement is correct is determined by the way the world actually is</li>
+</ol></li>
+</ol>
+</p>
+
 
 	</div>
 
 	<br />
 
 	<div class='page-footer'>
+		<b>Backlinks:</b>
+
+		<a href='./Nov_30_2017.html'>Zim Epistemology Notes:Nov 30 2017</a>
+
+		<br /><br />
 
 	</div>
 
