--- a/host/Epistemology/index.html
+++ b/host/Epistemology/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Dec 7 2017</title>
+	<title>Index of Epistemology</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Dec_5_2017.html'>Prev</a> ]
+	[ <span class='insen'>Prev</span> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='#index.html'>Index</a> ]
 
-	[ <a href='./Dec_12_2017.html'>Next</a> ]
+	[ <span class='insen'>Next</span> ]
 </div>
 
 <hr />
@@ -53,17 +53,28 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Dec 7 2017 <a name='Zim Epistemology Notes:Dec 7 2017'></a></h1>
+	<h1>Index of Epistemology <a name='index.html'></a></h1>
 	</div>
 
 	<div class='content'>
-	<p>
-Created Thursday 07 December 2017
-</p>
-
-<p>
-&lt;?&gt; still made it to class thought &lt;?&gt;
-</p>
+	<ul>
+<li><a href="./Home.html" title="Home" class="page">Home</a></li>
+<li><a href="./Old_Epistemology_notes.html" title="Old Epistemology notes" class="page">Old Epistemology notes</a>
+<ul>
+<li><a href="./Old_Epistemology_notes/Q1_Contemporary_Epistemology.html" title="Q1 Contemporary Epistemology" class="page">Q1 Contemporary Epistemology</a></li>
+<li><a href="./Old_Epistemology_notes/Q2_Thomist_Epistemology.html" title="Q2 Thomist Epistemology" class="page">Q2 Thomist Epistemology</a></li>
+</ul>
+</li>
+<li><a href="./Zim_Epistemology_Notes.html" title="Zim Epistemology Notes" class="page">Zim Epistemology Notes</a>
+<ul>
+<li><a href="./Zim_Epistemology_Notes/Dec_5_2017.html" title="Dec 5 2017" class="page">Dec 5 2017</a></li>
+<li><a href="./Zim_Epistemology_Notes/Dec_7_2017.html" title="Dec 7 2017" class="page">Dec 7 2017</a></li>
+<li><a href="./Zim_Epistemology_Notes/Dec_12_2017.html" title="Dec 12 2017" class="page">Dec 12 2017</a></li>
+<li><a href="./Zim_Epistemology_Notes/Dec_14_2017.html" title="Dec 14 2017" class="page">Dec 14 2017</a></li>
+<li><a href="./Zim_Epistemology_Notes/Nov_28_2017.html" title="Nov 28 2017" class="page">Nov 28 2017</a></li>
+<li><a href="./Zim_Epistemology_Notes/Nov_30_2017.html" title="Nov 30 2017" class="page">Nov 30 2017</a></li>
+</ul></li>
+</ul>
 
 	</div>
 
