--- a/host/Metaphysics/Metaphysics_Notes/Dec_5_2017.html
+++ b/host/Metaphysics/Metaphysics_Notes/Dec_5_2017.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Dec 12 2017</title>
+	<title>Dec 5 2017</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Dec_7_2017.html'>Prev</a> ]
+	[ <a href='../Metaphysics_Notes.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Dec_14_2017.html'>Next</a> ]
+	[ <a href='./Dec_7_2017.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,76 +53,28 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Dec 12 2017 <a name='Zim Epistemology Notes:Dec 12 2017'></a></h1>
+	<h1>Dec 5 2017 <a name='Metaphysics Notes:Dec 5 2017'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Tuesday 12 December 2017
+Created Tuesday 05 December 2017
 </p>
 
-<h4>Extra stuff:</h4>
+<h4>Does the first cause have intelligence:</h4>
 
 <p>
-<ul>
-<li>Lots of housekeeping stuff
-<ul>
-<li>Took course evals</li>
-<li>Talked about justice and charity</li>
-</ul></li>
-</ul>
+<ol type="1" start="1">
+<li>The first cause of intelligence must have intelligence.
+<ol type="a" start="1">
+<li>Any name that neccessarily implies limitations or potentials in its meanings must not be attributed to the first cause, and any meaning that does not imply these things must be attributed to it.</li>
+</ol>
+</li>
+<li>The first cause is the cause of intelligence</li>
+<li>=&gt; the first cause must have intelligence</li>
+</ol>
 </p>
 
-<h4>Class</h4>
-
-<p>
-Different disciplines are defined by different middles<br>
-<ul>
-<li>Maths
-<ul>
-<li>Earth is a sphere</li>
-<li>Spheres are round</li>
-</ul>
-</li>
-<li>Natural philosophy
-<ul>
-<li>Earth is made of matter</li>
-<li>Matter gratiates to a fixed point</li>
-<li>Matter around a fixed point is round</li>
-</ul>
-</li>
-<li>One conclusion
-<ul>
-<li>Earth is round</li>
-</ul></li>
-</ul>
-</p>
-
-<p>
-Applied to a modern argument: the universe had a beginning<br>
-<ul>
-<li>Philosophy
-<ul>
-<li>The universe is finite and has non-maximal entropy.
-<ul>
-<li>nme: The point at which the universe cannot undergo any other physical changes.</li>
-</ul>
-</li>
-<li>What is finite and has non-maximal entropy has a beginning in time.</li>
-</ul>
-</li>
-<li>Theology
-<ul>
-<li>The universe was created from nothing by God.</li>
-<li>What is created from nothing by God has a beginning.</li>
-</ul>
-</li>
-<li>One conclusion
-<ul>
-<li>The universe had a beginning</li>
-</ul></li>
-</ul>
-</p>
 
 	</div>
 
