--- a/host/Metaphysics/Metaphysics_Notes/Nov_30th_2017.html
+++ b/host/Metaphysics/Metaphysics_Notes/Nov_30th_2017.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Zim Epistemology Notes</title>
+	<title>Nov 30th 2017</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Old_Epistemology_notes/Q2_Thomist_Epistemology.html'>Prev</a> ]
+	[ <a href='./Nov_28th_2017.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Zim_Epistemology_Notes/Dec_5_2017.html'>Next</a> ]
+	[ <a href='./Paper_notes.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,26 +53,102 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Zim Epistemology Notes <a name='Zim Epistemology Notes'></a></h1>
+	<h1>Nov 30th 2017 <a name='Metaphysics Notes:Nov 30th 2017'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Thursday 23 November 2017
+Created Thursday 30 November 2017
 </p>
 
 <p>
-All notes under this will be sorted by date and properly formatted with Zim.
+Primary causation: A cause on which other causes rely<br>
+Secondary causation: A cause that relies upon other causes
 </p>
 
-<h4>Peer review:</h4>
+<h2>Outline:</h2>
 
 <p>
-<ul>
-<li>2 double-spaced pages for comments.</li>
-<li>Point out difficulties in paper</li>
-</ul>
+<ol type="1" start="1">
+<li>The most Intensely Existing Thing
+<ol type="a" start="1">
+<li>Is your mom better than a worm?</li>
+<li>Turnip axiom</li>
+<li>First cause: Pantheism?</li>
+<li>Cause of limitations and imperfections</li>
+</ol></li>
+</ol>
 </p>
+
+<h2>The most intensely Existing Thing:</h2>
+
+<br>
+
+<h4>Is your mom better than a worm?</h4>
+
+<p>
+<ol type="1" start="1">
+<li>The greatness of a being is determined by their potential to take in the forms of other beings.</li>
+<li>Superiority tracks inclusivity of forms of being</li>
+</ol>
+</p>
+
+<h4>Turnip Axiom</h4>
+
+<p>
+<ol type="1" start="1">
+<li>Nothing can give what it doesn't have.</li>
+<li>A cause must always possess in advance the type of actuality it gives.
+<ol type="a" start="1">
+<li>The cause must contain the actuality in the effect either in the same way or in a superior way
+<ol type="1" start="1">
+<li>Superior mode of existence:
+<ol type="a" start="1">
+<li>Builder and a house</li>
+</ol>
+</li>
+<li>Superior intensity
+<ol type="a" start="1">
+<li>fire and boiling water</li>
+</ol>
+</li>
+<li>Superior self-sufficiency
+<ol type="a" start="1">
+<li>(kind of a passing thought)</li>
+</ol></li>
+</ol></li>
+</ol></li>
+</ol>
+</p>
+
+<h4>First Cause - Pantheism?</h4>
+
+<p>
+<ol type="1" start="1">
+<li>The one first cause produces the actuality of all things</li>
+<li>Pantheism is problematic because:
+<ol type="a" start="1">
+<li>The whole universe is changing</li>
+<li>Cannot contain all actualities at once</li>
+</ol>
+</li>
+<li>Criticism:
+<ol type="a" start="1">
+<li>If God causes x does that mean that God is x</li>
+</ol></li>
+</ol>
+</p>
+
+<h4>Cause of limitations and imperfections</h4>
+
+<p>
+<ol type="1" start="1">
+<li>Limitations are not actualities, but lacks of actualities.</li>
+<li>The cause can impart an imperfect effect.</li>
+</ol>
+</p>
+
+<br>
 
 
 	</div>
