--- a/host/Metaphysics/index.html
+++ b/host/Metaphysics/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Nov 30 2017</title>
+	<title>Index of Metaphysics</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,9 +40,9 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Nov_28_2017.html'>Prev</a> ]
+	[ <span class='insen'>Prev</span> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='#index'>Index</a> ]
 
 	[ <span class='insen'>Next</span> ]
 </div>
@@ -53,171 +53,22 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Nov 30 2017 <a name='Zim Epistemology Notes:Nov 30 2017'></a></h1>
+	<h1>Index of Metaphysics <a name='index'></a></h1>
 	</div>
 
 	<div class='content'>
-	<p>
-Created Thursday 30 November 2017
-</p>
-
-<h4>Applied Aquinas</h4>
-
-<p>
-Rough Sketch of Scientia:<br>
-<ol type="1" start="1">
-<li>Organized body of knowledge
-<ol type="a" start="1">
-<li>Broader than contemporary science</li>
-</ol>
-</li>
-<li>Perfect knowledge of things through their causes
-<ol type="a" start="1">
-<li>Not merely an instance of knowing <i>that </i>something is the case (x is a plant)</li>
-<li>Knowing <i>why </i>something is the case (this is what would make something x a plant)</li>
-</ol>
-</li>
-<li>Goal of inquiry
-<ol type="a" start="1">
-<li>"Men do not think that they know a thing until they know its causes"</li>
-</ol>
-</li>
-<li>Scientia is reached when the causal structure of beliefs mirrors the causal structure of the world.
-<ol type="a" start="1">
-<li>The basis for a belief for a person with scientia on a thing will be qualitatively different than one without.
-<ol type="1" start="1">
-<li>A mokey is eating rocks, you and an expert see it.</li>
-<li>The monkey as you see it is eating rocks</li>
-<li>The monkey as the expert sees it is eating rocks because of the causal structure that make the monkey eat the rocks.</li>
-</ol></li>
-</ol>
-</li>
-<li>Requires all 3 acts of the mind <a href="./Nov_28_2017.html" title="(Nov 28 2017)" class="page">(Nov 28 2017)</a>
-<ol type="a" start="1">
-<li>Concepts </li>
-<li>Judgement</li>
-<li>Reasoning</li>
-</ol></li>
-</ol>
-Syllogism and the Whyagram<br>
-<ol type="1" start="1">
-<li><u>Syllogism:</u> a valid argument composed of three terms and 3 <i>categorial propositions</i>.
-<ol type="a" start="1">
-<li><u>categorial propositions:</u> Propositions with 1 subject and 1 predicate and no connectives.</li>
-</ol>
-</li>
-<li>The Standard Example:
-<ol type="a" start="1">
-<li>All <i>men</i> are <i>mortal </i>(Major Premise)</li>
-<li><i>Socrates</i> is a <i>man </i>(Minor premise</li>
-<li><i>Socrates</i> is <i>mortal</i>
-<ol type="1" start="1">
-<li>Subject of the conclusion is always the <u>Minor term </u> (Socrates)</li>
-<li>The predicate of the conclusion is always the <u>Major term </u> (mortal)</li>
-<li>The subject of the first premise is always the <u>Middle term </u> (Men)</li>
-</ol></li>
-</ol>
-</li>
-<li>Whyagram
-<ol type="a" start="1">
-<li>Method used to produce an argument stating why the conclusion is so.</li>
-<li>Example:
-<ol type="1" start="1">
-<li>Proving that cats are mammals.</li>
-<li>cats || are mammals</li>
-<li>Why is it so that cats are mammals? </li>
-<li>x(mammal/cat intercept): <i>Makes milk and have hair</i></li>
-<li>Choose a quantifier (whatever)
-<ol type="a" start="1">
-<li>Whatever <i>makes milk and has hair</i> are mammals.</li>
-<li>Cats <i>make milk and have hair</i>.</li>
-<li>Cats are mammals.</li>
-</ol></li>
-</ol>
-</li>
-<li>Another Example:
-<ol type="1" start="1">
-<li>Proving tomatoes are fruits</li>
-<li>Tomatoes|| are fruits
-<ol type="a" start="1">
-<li>x(Tomatoe/fruit intercept): <i>seed containing vehicles of plant reproduction</i>.</li>
-<li>Choose a quantifier (whatever)
-<ol type="1" start="1">
-<li>Whatever is a <i>seed containing vehicle of pland reproduction </i> are fruits.</li>
-<li>Tomatoes are <i>seed containing vehicles of plant reproduction.</i></li>
-<li>Tomatoes are fruits.</li>
-</ol></li>
-</ol></li>
-</ol></li>
-</ol></li>
-</ol>
-For scientia, the premises of the argument must meet "priority conditions."<br>
-<ol type="1" start="1">
-<li>Successful scientia producing demonstration:
-<ol type="a" start="1">
-<li>All vines are broad-leaved</li>
-<li>All broad-leaved plants are sap-congealers at the leaf stalk.</li>
-<li>All sap-congealers at the leaf stalk are deciduous</li>
-<li>Therefore, all vines are deciduous (deciduous: leaves fall off in the fall)</li>
-</ol>
-</li>
-<li>Features of the premises:
-<ol type="a" start="1">
-<li>Each premise is necessarily true.</li>
-<li>Each premise is true per se.
-<ol type="1" start="1">
-<li>In accord with its nature.</li>
-</ol>
-</li>
-<li>Each premise is prior to the conclusion.</li>
-<li>Each premise is true</li>
-<li>Each premise states the cause.</li>
-<li>The premises are immediate.</li>
-<li>The premises are primitive
-<ol type="1" start="1">
-<li>Each premise of a scientific demonstration must be a primitive truth.</li>
-<li>Each predicate in the premises must be said primitively of the subject.</li>
-<li>What does this mean?
-<ol type="a" start="1">
-<li>Not merely universally said.
-<ol type="1" start="1">
-<li>A predicate is said universally of a thing when it is said of all the members of a thing</li>
-<li>Not universally said: All goats are female (false, cannot be said of each and every one of the kind)</li>
-<li>Is universally said: All goats have internal organs. (true, can be said of each and every one of the kind)</li>
-<li>point: A predicate said primitively is said universally of its subject, but not merely that.</li>
-</ol>
-</li>
-<li>A predicate said primitively is said per se, but not merely that
-<ol type="1" start="1">
-<li>All humans are rational.</li>
-<li>All humans are bodily.</li>
-</ol>
-</li>
-<li>A predicate said primitively belongs to the subject per se, but not to anything outside of the subject's genus.
-<ol type="1" start="1">
-<li>Shorthand: The predicate is per se and uniquely true of the subject.</li>
-</ol></li>
-</ol>
-</li>
-<li>Examples:
-<ol type="a" start="1">
-<li>Not primitive: All humans are bodily. (not only humans are bodily)</li>
-<li>Not primitive: All plants are made of cells. (not only plants are made of cells)</li>
-<li>Is primitive: All humans are risible (capacity for laughter). (only humans have this capacity)</li>
-<li>is primitive: All broad leafed plants are sap-congealers at the leaf stalk. (only broad leafed plants are sap-congealers at the leaf stalk)</li>
-</ol>
-</li>
-<li>Primitive truths are convertable
-<ol type="a" start="1">
-<li>All (a)s are (b)s and all (b)s are (a)s</li>
-</ol></li>
-</ol></li>
-</ol></li>
-</ol>
-</p>
-
-<br>
-
+	<ul>
+<li><a href="./Metaphysics_Notes.html" title="Metaphysics Notes" class="page">Metaphysics Notes</a>
+<ul>
+<li><a href="./Metaphysics_Notes/Dec_5_2017.html" title="Dec 5 2017" class="page">Dec 5 2017</a></li>
+<li><a href="./Metaphysics_Notes/Dec_7_2017.html" title="Dec 7 2017" class="page">Dec 7 2017</a></li>
+<li><a href="./Metaphysics_Notes/Dec_12_2017.html" title="Dec 12 2017" class="page">Dec 12 2017</a></li>
+<li><a href="./Metaphysics_Notes/Dec_14_2017.html" title="Dec 14 2017" class="page">Dec 14 2017</a></li>
+<li><a href="./Metaphysics_Notes/Nov_28th_2017.html" title="Nov 28th 2017" class="page">Nov 28th 2017</a></li>
+<li><a href="./Metaphysics_Notes/Nov_30th_2017.html" title="Nov 30th 2017" class="page">Nov 30th 2017</a></li>
+<li><a href="./Metaphysics_Notes/Paper_notes.html" title="Paper notes" class="page">Paper notes</a></li>
+</ul></li>
+</ul>
 
 	</div>
 
