--- a/host/Philisophical/index.html
+++ b/host/Philisophical/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>2-12-18 Individuation</title>
+	<title>Index of Philosophical Theology</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,9 +40,9 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='../Post-Move.html'>Prev</a> ]
+	[ <span class='insen'>Prev</span> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='#index'>Index</a> ]
 
 	[ <span class='insen'>Next</span> ]
 </div>
@@ -53,79 +53,17 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>2-12-18 Individuation <a name='Post-Move:2-12-18'></a></h1>
+	<h1>Index of Philosophical Theology <a name='index'></a></h1>
 	</div>
 
 	<div class='content'>
-	<p>
-Created Monday 12 February 2018
-</p>
-
-<p>
-Notes:<br>
-<ol type="1" start="1">
-<li>Individuation of material substances:
-<ol type="a" start="1">
-<li><b>Individuation</b>: What makes a thing separate or distinct from other things.</li>
-<li>How this is achieved:
-<ol type="1" start="1">
-<li>Soul individuates Peter from Paul.</li>
-<li>Souls are individuated by "matter under indeterminate dimensions = "signate matter."
-<ol type="a" start="1">
-<li>Due to matter being:
-<ol type="1" start="1">
-<li>extension</li>
-<li>space filling</li>
-<li>place occupying</li>
-</ol></li>
-</ol></li>
-</ol></li>
-</ol>
-</li>
-<li>Doctrine on Christ: one person in two natures:
-<ol type="a" start="1">
-<li>One substance in Christ.
-<ol type="a" start="1">
-<li>(person = an individual substance of a rational nature)</li>
-<li>=&gt; One person in Christ</li>
-<li>Christ is a composite person
-<ol type="a" start="1">
-<li>One "constituent" of Christ is the divine nature</li>
-<li>The other "constituent" of Christ is a complete human nature.</li>
-</ol>
-</li>
-<li>Christ's human nature is united to the Word in a unity of person</li>
-<li>=&gt; Christ's having a complete human nature does not entail two persons in Christ</li>
-</ol>
-</li>
-<li>(ST P3 Q4 A2) <a href="http://www.newadvent.org/summa/4004.htm#article2" title="http://www.newadvent.org/summa/4004.htm#article2" class="http">http://www.newadvent.org/summa/4004.htm#article2</a></li>
-<li>Both of these natures must be joined in some fashion:
-<ol type="a" start="7">
-<li>Christ has the divine nature and has filiation to the Father, though they are not distinct due to simplicity of the divine nature.</li>
-<li>Christ's human nature is substantial form + prime matter</li>
-</ol>
-</li>
-<li>3 Answers:
-<ol type="1" start="1">
-<li>The second person of the trinity and Christ's human nature become parts of Christ.
-<ol type="a" start="1">
-<li>Divine nature does not enter into composition.</li>
-</ol>
-</li>
-<li>CHN becomes a part of the second person of the trinity
-<ol type="a" start="1">
-<li>Divine nature is simple and can have no parts.</li>
-</ol>
-</li>
-<li>Habitus: Christ's human nature is in the second person like an accident.
-<ol type="a" start="9">
-<li>Doesn't seem to violate divine simplicity as much?</li>
-<li>An accidental union however is not a unity of person</li>
-</ol></li>
-</ol></li>
-</ol></li>
-</ol>
-</p>
+	<ul>
+<li><a href="./Home.html" title="Home" class="page">Home</a></li>
+<li><a href="./Post-Move.html" title="Post-Move" class="page">Post-Move</a>
+<ul>
+<li><a href="./Post-Move/2-12-18.html" title="2-12-18" class="page">2-12-18</a></li>
+</ul></li>
+</ul>
 
 	</div>
 
