--- a/host/Metaphysics/Metaphysics_Notes/Paper_notes.html
+++ b/host/Metaphysics/Metaphysics_Notes/Paper_notes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Old Epistemology notes</title>
+	<title>Paper notes</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Home.html'>Prev</a> ]
+	[ <a href='./Nov_30th_2017.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='../index.html'>Index</a> ]
 
-	[ <a href='./Old_Epistemology_notes/Q1_Contemporary_Epistemology.html'>Next</a> ]
+	[ <span class='insen'>Next</span> ]
 </div>
 
 <hr />
@@ -53,16 +53,21 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Old Epistemology notes <a name='Old Epistemology notes'></a></h1>
+	<h1>Paper notes <a name='Metaphysics Notes:Paper notes'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Thursday 23 November 2017
+Created Friday 24 November 2017
 </p>
 
+<h4>(11/24/2017)</h4>
+
 <p>
-Minimally formatted for Zim
+<ul>
+<li>Need to do peer review sheet!</li>
+<li>More citations, finish rough draft</li>
+</ul>
 </p>
 
 	</div>
