--- a/host/Philisophical/Post-Move.html
+++ b/host/Philisophical/Post-Move.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Dec 14 2017</title>
+	<title>Post-Move</title>
 	<meta name='Generator' content='Zim 0.67'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -40,11 +40,11 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Dec_12_2017.html'>Prev</a> ]
+	[ <a href='./Home.html'>Prev</a> ]
 
-	[ <span class='insen'>Index</span> ]
+	[ <a href='./index.html'>Index</a> ]
 
-	[ <a href='./Nov_28_2017.html'>Next</a> ]
+	[ <a href='./Post-Move/2-12-18.html'>Next</a> ]
 </div>
 
 <hr />
@@ -53,43 +53,16 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Dec 14 2017 <a name='Zim Epistemology Notes:Dec 14 2017'></a></h1>
+	<h1>Post-Move <a name='Post-Move'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Thursday 14 December 2017
+Created Monday 12 February 2018
 </p>
 
 <p>
-<ul>
-<li>There will be notes in the handout-text.</li>
-</ul>
-</p>
-
-<h4>Assorted Notes:</h4>
-
-<p>
-<ol type="1" start="1">
-<li>Epistemology as Lexicology
-<ol type="a" start="1">
-<li>General format: "S knows that p"
-<ol type="1" start="1">
-<li>Case: Blake is a knight</li>
-<li>Blake is a knight only if Blake is indomitable in battle</li>
-<li>only if she rules her realm with wisdom</li>
-<li>only if she makes women swoon</li>
-<li>only if always courteous in public and private</li>
-<li>only if she has subtle but perfect fashion sense
-<ol type="a" start="1">
-<li>After this, you ask "is anyone a knight?"</li>
-<li>It seems like nobody meets the full requirements</li>
-</ol></li>
-</ol>
-</li>
-<li>When we are studying a term lexicologically, we are studying the sufficient conditions for something in the world to reflect the way we refer to the term linquistically.</li>
-</ol></li>
-</ol>
+All notes made post move back to zim
 </p>
 
 	</div>
